Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86745

Application crashes on exit when using a Texture with sourceItem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.0.0 RC
    • 6.0
    • Quick: 3D
    • None
    • Linux/X11
    • 1
    • 3c4d56de4d241f68bdf9eb400968cbba408254df (qt/qtquick3d/dev)
    • Qt Quick 3D - 39 - 40

    Description

      I am running this through qmlscene using qtquick3d commit e28ee90737f247c13171e4a6cb06a03aba3521d3.

      Attachments

        1. BugA.qml
          3 kB
        2. valgrind.txt
          48 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            janichol Andy Nichols
            jokarlss Jonas Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes